fix: openApi lint and param name
