# openapi3.yaml
@@ -94,7 +94,7 @@ paths:
             type: string
           required: true
         - in: query
-          name: recurse
+          name: isRecursive
           schema:
             type: boolean
       responses:
@@ -124,7 +124,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
               example:
-                message: 'Workspace or related Namespace is not empty (and recurse not true)'
+                message: 'Workspace or related Namespace is not empty (and isRecursive not true)'
   /workspaces/{workspace}/{newWorkspaceName}:
     put:
       operationId: updateWorkspace
